sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: '=' expected but ';' found.
  var k=0
^AlgBubbleSort1:5: error: '(' expected but identifier found.
  while k==0{
        ^AlgBubbleSort1:15: error: illegal start of simple expression
} 
^